devops/D4-kubernetes-deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: eval-ai-agent
  labels:
    app: b4-transaction-api
spec:
  type: ClusterIP
  selector:
    app: b4-transaction-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
